--- a/reports/references.bib
+++ b/reports/references.bib
@@ -23,13 +23,13 @@
 
 @misc{PS, 
   title = {Penguin Science},
-  author = {Long Term Ecological Research Program},
+  author = {Long Term Ecological Research Program {LTER}},
   url = {https://penguinscience.com/},
 }
 
 @article{RStudio, 
   title = {Release the penguins}, 
-  author = {Alison {Hill}, Allison {Horst}, and Krissten {Gorman}},
+  author = {{Hill, Horst and Gorman}, Alison Hill, Allison Horst, and Krissten Gorman},
   year = {2020}, 
   url = {https://education.rstudio.com/blog/2020/07/palmerpenguins-cran/},
 }
